test 4 and controller logic

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,11 @@
         {% endblock %}
     </head>
     <body>
+    <style>
+    body{
+        background-color: grey;
+    }
+    </style>
         {% block body %}{% endblock %}
     </body>
 </html>
