--- a/templates/home/booking.html.twig
+++ b/templates/home/booking.html.twig
@@ -11,10 +11,18 @@
 		<label for="start-time">Start time:</label>
 		<input type="time" id="start-time" name="start-time" min="08:00" max="16:00" required>
 
-        <label for="end-time">End time:</label>
+		<label for="end-time">End time:</label>
 		<input type="time" id="end-time" name="end-time" min="08:00" max="20:00" required>
+		<input type="text" name="roomId" id="roomId" value={{roomId}} hidden>
 
-		<input type="submit" value="Reserver roomci">
+		<label for="users">Choose your email:</label>
+		<select name="users" id="users">
+			{% for user in users %}
+				<option value={{ user.id}}>{{ user.email}}</option>
+			{% endfor %}
+		</select>
+		
+		<input type="submit" value="Reserve room">
 	</form>
 
 {% endblock %}
