--- a/templates/booking/index.html.twig
+++ b/templates/booking/index.html.twig
@@ -1,10 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!
-{% endblock %}
+{% block title %}Hello BookingController!{% endblock %}
 
 {% block body %}
-	<form action="/home" method="POST">
+<style>
+h1{
+    color:red;
+}
+</style>
+	<form action="/success" method="POST">
 		<label for="date">Date:</label>
 		<input type="date" id="date" name="date" value="2022-01-17" min="2022-01-01" max="2022-12-31">
 
@@ -24,5 +28,5 @@
 		
 		<input type="submit" value="Reserve room">
 	</form>
-
+    <h1>{{errorMsg}}</h1>
 {% endblock %}
