--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,7 @@
     <style>
     body{
         background-color: grey;
+        font-size:2rem;
     }
     </style>
         {% block body %}{% endblock %}
