--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,9 @@
         font-size:2rem;
     }
     </style>
+    <nav>
+    <a href="/user">User</a> |  <a href="/">Home</a>
+    </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
